rust/core/src/lang/snapshots/lucid_suggest_core__lang__normalize__tests__unicode_normalize_nfc_middle.snap
---
source: src/lang/normalize.rs
expression: output
---
(
    [
        "f",
        "o",
        "ó",
        "b",
        "a",
        "r",
    ],
    [
        "f",
        "o",
        "o",
        "b",
        "a",
        "r",
    ],
)
