rust/core/src/lang/snapshots/lucid_suggest_core__lang__normalize__tests__unicode_normalize_single_nfd_replaced.snap
---
source: src/lang/normalize.rs
expression: output
---
(
    [
        "o\u{301}",
    ],
    [
        "o",
    ],
)
