rust/core/src/lang/snapshots/lucid_suggest_core__lang__normalize__tests__unicode_normalize_singleton_replaced.snap
---
source: src/lang/normalize.rs
expression: output
---
(
    [
        "ó",
    ],
    [
        "o",
    ],
)
