rust/core/src/lang/snapshots/lucid_suggest_core__lang__normalize__tests__utf_normalize_nfc_beginning.snap
---
source: src/lang/normalize.rs
expression: output
---
(
    [
        "ó",
        "o",
        "o",
        "b",
        "a",
        "r",
    ],
    [
        "o",
        "o",
        "o",
        "b",
        "a",
        "r",
    ],
)
