rust/core/src/lang/snapshots/lucid_suggest_core__lang__normalize__tests__utf_normalize_nfc_end.snap
---
source: src/lang/normalize.rs
expression: output
---
(
    [
        "f",
        "o",
        "o",
        "b",
        "a",
        "ó",
    ],
    [
        "f",
        "o",
        "o",
        "b",
        "a",
        "o",
    ],
)
