rust/core/src/lang/snapshots/lucid_suggest_core__lang__normalize__tests__utf_normalize_nfd_beginning.snap
---
source: src/lang/normalize.rs
expression: output
---
(
    [
        "o\u{301}",
        "o",
        "o",
        "b",
        "a",
        "r",
    ],
    [
        "o",
        "o",
        "o",
        "b",
        "a",
        "r",
    ],
)
