rust/core/src/lang/snapshots/lucid_suggest_core__lang__normalize__tests__utf_normalize_nfd_middle.snap
---
source: src/lang/normalize.rs
expression: output
---
(
    [
        "f",
        "o",
        "o\u{301}",
        "b",
        "a",
        "r",
    ],
    [
        "f",
        "o",
        "o",
        "b",
        "a",
        "r",
    ],
)
