rust/core/src/lang/snapshots/lucid_suggest_core__lang__normalize__tests__utf_normalize_singleton_normal.snap
---
source: src/lang/normalize.rs
expression: output
---
(
    [
        "f",
    ],
    [
        "f",
    ],
)
